<resources>
    <string name="app_name">Swipe Launcher</string>
    <string name="company_name">Simply Apps</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit">Edit</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="contact">Contact</string>

    <string name="enable">Enable Swipe Launcher</string>
    <string name="enable_details">Enables the swipe trigger</string>

    <string name="theme">Theme</string>
    <string name="trigger_color">Trigger Color</string>
    <string name="trigger_width">Trigger Width</string>
    <string name="trigger_height">Trigger Height</string>
    <string name="trigger_offset">Horizontal Offset</string>
    <string name="trigger_offset_details">-50 is all the way to the left of the screen, 50 is all the way to the right.</string>
    <string name="launcher_color_primary">Launcher Primary Color</string>
    <string name="launcher_color_accent">Launcher Accent Color</string>
    <string name="launcher_max_height">Maximum Launcher Height</string>
    <string name="default_icon_pack">Default Icon Pack</string>
    <string name="default_icon_pack_details">Apps added to the launcher will have their icons chosen from this icon pack.</string>
    <string name="default_icon_tint">Default Icon Tint Color</string>
    <string name="default_icon_tint_details">Apps added to the launcher will have their icons tinted.</string>

    <string name="behavior">Behavior</string>
    <string name="long_press_remove">Long Press to Remove</string>
    <string name="long_press_remove_details">Long pressing on the trigger will remove it.</string>
    <string name="vibrate_on_long_press">Vibrate on Long Press</string>
    <string name="hover_trigger">Hover on Trigger</string>
    <string name="hover_trigger_details">Hovering over the trigger will trigger the launcher (requires hardware support).</string>
    <string name="autostart">Autostart</string>
    <string name="autostart_details">The trigger will start automatically after your phone turns on.</string>
    <string name="toggle_interruption_filter">Toggle Interruption Filter</string>
    <string name="toggle_interruption_filter_details">Pressing the volume seekbar button will change the interruption filter.</string>

    <string name="tutorial">Swipe up from the bottom of the screen to start Swipe Launcher.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">OK</string>
    <string name="custom_color">CUSTOM</string>
    <string name="notif_title">Swipe Launcher Stopped</string>
    <string name="notif_text">Tap to restart Swipe Launcher</string>
</resources>
