<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/activities"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:checked="false"
            android:title="@string/home"/>

        <item
            android:id="@+id/edit"
            android:icon="@drawable/ic_edit"
            android:checked="false"
            android:title="@string/edit"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:checked="false"
            android:title="@string/settings"/>

        </group>

    <group
        android:id="@+id/others"
        android:checkableBehavior="single">

        <item
            android:id="@+id/rate"
            android:icon="@drawable/ic_star"
            android:checked="false"
            android:title="@string/rate"/>

        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_email"
            android:checked="false"
            android:title="@string/contact"/>

    </group>

</menu>