<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    tools:context="com.simplyapps.swipelauncher.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:src="@drawable/ic_app"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/grey_500"
            android:textSize="28sp"/>

        <ImageView
            android:src="@drawable/ic_tutorial"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:text="@string/tutorial"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            style="@style/TextSecondary"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

        <RelativeLayout
            android:id="@+id/enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="12dp">

            <TextView
                android:id="@+id/enable_text"
                android:text="@string/enable"
                style="@style/TextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_alignParentStart="true"/>

            <TextView
                android:text="@string/enable_details"
                style="@style/TextSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/enable_text"
                android:layout_toStartOf="@+id/enable_switch"
                android:layout_alignParentStart="true"/>

            <Switch
                android:id="@+id/enable_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/enable_text"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>